--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "framer-motion": "^12.29.2",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
